--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,5 @@
-# ==========================================
-# ⚔️ 三國之巔 - 核心與前端框架
-# ==========================================
 streamlit>=1.35.0
 pandas>=2.0.0
-
-# ==========================================
-# 🔒 資安、憑證與 API 管理
-# ==========================================
-# 用於安全載入 .env 檔案
 python-dotenv>=1.0.1
-# Google Gemini API 官方 SDK
-google-generativeai>=0.7.0
-
-# ==========================================
-# 🗄️ 資料庫與防注入防護
-# ==========================================
-SQLAlchemy>=2.0.25
-
-# ==========================================
-# 🛡️ 嚴格資料校驗
-# ==========================================
-pydantic>=2.6.0
+# 🚀 升級為 Google 官方最新世代 SDK
+google-genai>=0.5.0
