--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit>=1.35.0
 pandas>=2.0.0
 python-dotenv>=1.0.1
-# 🚀 升級為 Google 官方最新世代 SDK
 google-genai>=0.5.0
+# 🚀 新增：用於串接 Grok (xAI) 的相容套件
+openai>=1.10.0
